# bevy

./: .gitignore  Cargo.toml
crates/bevy_ai_ui_parser/: AGENTS.md  Cargo.toml
crates/bevy_ai_ui_parser/opendesign-integration/: INTEGRATION.md
crates/bevy_ai_ui_parser/opendesign-integration/design-systems/bevy-ui/: DESIGN.md  components.html  manifest.json  tokens.css
crates/bevy_ai_ui_parser/opendesign-integration/design-templates/bevy-ui/: SKILL.md
crates/bevy_ai_ui_parser/schema/: bui-3.0-ir.schema.json  bui.schema.json
crates/bevy_ai_ui_parser/src/: lib.rs  tests.rs
crates/bevy_ai_ui_parser/src/core/: api.rs  legacy.rs  mod.rs
crates/bevy_ai_ui_parser/src/core/editor/: auto_enable.rs  automation.rs  borders.rs  debug.rs  delete.rs  dialog.rs  discard.rs  drag.rs  hover.rs  mod.rs  persistence.rs  save.rs  state.rs  toggle.rs
crates/bevy_ai_ui_parser/src/core/interaction/: actions.rs  bindings.rs  components.rs  list.rs  mod.rs  progress.rs  schedule.rs  state.rs  state_init.rs  state_visual.rs  tabs.rs  text_input.rs  toggle.rs  types.rs
crates/bevy_ai_ui_parser/src/core/model/: bui.rs  ir.rs  mod.rs  style.rs  visual.rs
crates/bevy_ai_ui_parser/src/core/opendesign/: build.rs  cases.rs  dom.rs  html.rs  manifest.rs  mod.rs  preset.rs
crates/bevy_ai_ui_parser/src/core/parse/: document.rs  ir.rs  mod.rs
crates/bevy_ai_ui_parser/src/tests/: cases_hero.rs  cases_quest.rs  cases_village.rs  css_gradients.rs  css_values.rs  ir.rs  mod.rs  opendesign_fallback.rs  opendesign_html.rs  opendesign_manifest.rs  parse.rs  runtime_contract.rs  shared.rs
(+256 files in other folders)
