[package]
name = "bevy_ai_ui_parser"
version = "0.1.0"
edition = "2024"
description = "A JSON-driven UI parser plugin for Bevy"
homepage = "https://bevy.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "ui", "json"]

[dependencies]
# bevy
bevy_app = { path = "../bevy_app", version = "0.19.0-dev" }
bevy_asset = { path = "../bevy_asset", version = "0.19.0-dev" }
bevy_camera = { path = "../bevy_camera", version = "0.19.0-dev" }
bevy_color = { path = "../bevy_color", version = "0.19.0-dev" }
bevy_ecs = { path = "../bevy_ecs", version = "0.19.0-dev" }
bevy_image = { path = "../bevy_image", version = "0.19.0-dev" }
bevy_input_focus = { path = "../bevy_input_focus", version = "0.19.0-dev" }
bevy_log = { path = "../bevy_log", version = "0.19.0-dev" }
bevy_math = { path = "../bevy_math", version = "0.19.0-dev" }
bevy_text = { path = "../bevy_text", version = "0.19.0-dev" }
bevy_ui = { path = "../bevy_ui", version = "0.19.0-dev" }
bevy_ui_widgets = { path = "../bevy_ui_widgets", version = "0.19.0-dev" }

# other
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"

[lints]
workspace = true
